@@ -25,13 +25,7 @@ $(document).ready(function() {
 	/**
 	 * Récupération ajax des produits
 	 */
-	$.ajax({
-        url: "../../../../admin-dev/index.php?controller=Wysiwyg&module=eicmslinks&action=ProductsList&ajax=1&token=" + js_token,
-        method: "post",
-        success: function(msg) {
-            $("#product_content").html("").html(msg);
-        }
-    });
+	_getProductsList();
 
     /**
      * Insertion d'une catégorie
@@ -43,5 +37,46 @@ $(document).ready(function() {
             label = $.trim($(this).parent().text());
         addLink('{{category url='+$(this).val()+'}}',label);
     });
+	
+	/**
+	 * Insertion d'un produit
+	 */
+	 $(document).on('click','table.add_product_link_form tbody tr', function() {
+		id_product = $.trim($(this).children('td.product_id').text());
+		product_name = $.trim($(this).children('td.product_name').text());
+		addLink('{{product url='+ id_product +'}}',product_name);
+    });
+	
+	/**
+	 * Gestion de la recherche des produits
+     * ( Effectuée en ajax )	 
+	 */
+	 $(document).on('click','#submitFilterButtonadd_product_link_form',function(){
+		
+		id = $('input[name="add_product_link_formFilter_id_product"]').val();
+		reference = $('input[name="add_product_link_formFilter_reference"]').val();
+		name = $('input[name="add_product_link_formFilter_name"]').val();
+
+		_getProductsList(id,reference,name);
+		return false;
+	 });
+	 
+	 /**
+	  * Fonction de récupération de la liste des produits 
+	  */
+	 function _getProductsList(id,reference,name) {
+		 $.ajax({
+			url: "../../../../admin-dev/index.php?controller=Wysiwyg&module=eicmslinks&action=ProductsList&ajax=1&token=" + js_token,
+			method: "post",
+			data : {
+				add_product_link_formFilter_id_product : id,
+				add_product_link_formFilter_reference : reference,
+				add_product_link_formFilter_name : name
+			},
+			success: function(msg) {
+				$("#product_content").html("").html(msg);
+			}	
+		 });
+	 }
 
 });
