@@ -9,4 +9,5 @@
  2015-03-20 V 0.2.0 : - Compatibilité Prestashop 1.6
                       - Optimisation du code ( gestion des traductions )
 2015-04-04 V 0.3.0 : - Compatibilité avec prestashop 1.5 et 1.6 via une surcharge alternative 
-2015-05-01 V 0.4.0 : - Gestion de liens dynamiques pour les catégories de produits 
+2015-05-01 V 0.4.0 : - Gestion de liens dynamiques pour les catégories de produits
+2015-05-04 V 0.5.0 : - Gestion des liens dynamiques pour les produits 
